force-app/main/default/objects/Care_Observation__c/Care_Observation__c.object-meta.xml
<CustomObject>
    <label>Care Observation</label>
    <nameField>
        <label>Care Observation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Observation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>