force-app/main/default/objects/Care_Observation__c/fields/Numeric_Value__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Value__c</fullName>
    <label>Numeric Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>