force-app/main/default/objects/Care_Observation__c/fields/Observed_Patient__c.field-meta.xml
<CustomField>
    <fullName>Observed_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Observed Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Care Observation</relationshipLabel>
    <relationshipName>Care_Observation</relationshipName>
    <type>Lookup</type>
</CustomField>