force-app/main/default/objects/Care_Observation__c/fields/Processing_Result__c.field-meta.xml
<CustomField>
    <fullName>Processing_Result__c</fullName>
    <label>Processing Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>